# schick.services_Website

./: database.py  pyproject.toml  requirements.txt  users.db  website.py
noch nicht fertig/: Backup.py
noch nicht fertig/templates/: pw_vergessen.j2
schick.services_Website/: database.py
templates/: _base.j2  admin_auth.j2  home.j2  kalender.j2  login.j2  registrieren.j2  usermanagement.j2
