[tool.poetry]
name = "repl_python3_schickservicesWebsite"
version = "0.1.0"
description = ""
authors = ["NicoSchick <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
SQLAlchemy = "^1.4.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
